fixed overflow problem

--- a/css/dograma.css
+++ b/css/dograma.css
@@ -14,7 +14,10 @@ body {
   font-weight: 400;
   color: #555;
 }
-
+.wrapper {
+  overflow: hidden;
+  position: relative;
+}
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
